--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -27,7 +27,7 @@ body {
   overflow-y: scroll;
   -moz-osx-font-smoothing: grayscale;
   -webkit-font-smoothing: antialiased;
-  background-color: #0b040c;
+  background-color: #200406;
   color: white;
   font-family: "Poppins", sans-serif;
 }
